# sc2-parser

./: Cargo.toml  LICENSE.md  flake.nix  main.ts  main_test.ts  test.ts
src/: README.md  builds.rs  cluster.rs  decoders.rs  events.rs  game.rs  lib.rs  main.rs  mpq.rs  parser.rs  protocol.rs  replay.rs  utils.rs
src/events/: object_event.rs  player_stats_event.rs
