[package]
name = "sc2-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
# radix_trie = { version = "0.2", features = ["serde"] }
sha256 = "1.0.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
# bzip2-rs = { version = "0.1.2", features = ["rustc_1_51"] }
bzip2-rs = { git = "https://github.com/paolobarbolini/bzip2-rs", features = ["rustc_1_55"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"
console_error_panic_hook = "0.1.7"
tsify-next = { version = "0.5.4", features = ["js"] }

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
opt-level = 3

[lib]
crate-type = ["cdylib"]
